syntax = "proto3";

package test.v1;

import "nrf110/permify/v1/permify.proto";
import "test/v1/common.proto";

option go_package = "test/v1;testv1";

message UpdateUserRequest {
  option (nrf110.permify.v1.resource_type) = "User";

  string id = 1 [(nrf110.permify.v1.resource_id) = true];
  string company_id = 2 [(nrf110.permify.v1.tenant_id) = true];
  string name = 3;
}

service UserService {
  rpc UpdateUser(UpdateUserRequest) returns (Response) {
    option (nrf110.permify.v1.permission) = "write";
  }
}
